--- a/src/config/tile commands config.json
+++ b/src/config/tile commands config.json
@@ -1,33 +1,38 @@
 {
 "commands":{
-    "0":{"name":"empty","command":"None"},
+    "0":{"name":"empty","command":"maplist2d[y][x] = None"},
     "1":{"name":"local player","command":"other command"},
-    "2":{"name":"remote player","command":"other command"},
-    "3":{"name":"DefaultTile","command":"DefaultTile()"},
-    "4":{"name":"Brick","command":"Brick()"},
-    "5":{"name":"Bedrock","command":"Bedrock()"},
-    "7":{"name":"Goal","command":"Goal()"},
-    "8":{"name":"not falling tnt","command":"Tnt(False)"},
-    "9":{"name":"falling tnt","command":"Tnt(True)"},
-    "10":{"name":"not falling stone","command":"Stone(False)"},
-    "10 1":{"name":"not falling stone","command":"Stone(False,1)"},
-    "10 2":{"name":"not falling stone","command":"Stone(False,2)"},
-    "10 3":{"name":"not falling stone","command":"Stone(False,3)"},
-    "10 4":{"name":"not falling stone","command":"Stone(False,4)"},
-    "11":{"name":"falling stone","command":"Stone(True)"},
-    "11 1":{"name":"falling stone","command":"Stone(True,1)"},
-    "11 2":{"name":"falling stone","command":"Stone(True,2)"},
-    "11 3":{"name":"falling stone","command":"Stone(True,3)"},
-    "11 4":{"name":"falling stone","command":"Stone(True,4)"},
-    "14":{"name":"monster which looking to right","command":"Monster(1)"},
-    "15":{"name":"monster which looking to down","command":"Monster(2)"},
-    "16":{"name":"monster which looking to left","command":"Monster(3)"},
-    "17":{"name":"monster which looking to up","command":"Monster(4)"},
-    "18":{"name":"not a falling diamond","command":"Diamond(False)"},
-    "19":{"name":"falling diamond","command":"Diamond(True)"},
-    "20":{"name":"Door up","command":"Door(1)"},
-    "21":{"name":"Door right","command":"Door(2)"},
-    "22":{"name":"Door right","command":"Door(3)"},
-    "23":{"name":"Door right","command":"Door(4)"}
+    "2":{"name":"remote player","command":"maplist2d[y][x] = gamedata.remote_player_;gamedata.remote_player_.image_number_ = 0"},
+    "2 1":{"name":"remote player direction 0","command":"maplist2d[y][x] = gamedata.remote_player_;gamedata.remote_player_.image_number_ = 0"},
+    "2 2":{"name":"remote player direction 1","command":"maplist2d[y][x] = gamedata.remote_player_;gamedata.remote_player_.image_number_ = 1"},
+    "2 3":{"name":"remote player direction 2","command":"maplist2d[y][x] = gamedata.remote_player_;gamedata.remote_player_.image_number_ = 2"},
+    "2 4":{"name":"remote player direction 3","command":"maplist2d[y][x] = gamedata.remote_player_;gamedata.remote_player_.image_number_ = 3"},
+    "2 5":{"name":"remote player direction 4","command":"maplist2d[y][x] = gamedata.remote_player_;gamedata.remote_player_.image_number_ = 4"},
+    "3":{"name":"DefaultTile","command":"maplist2d[y][x] = DefaultTile()"},
+    "4":{"name":"Brick","command":"maplist2d[y][x] = Brick()"},
+    "5":{"name":"Bedrock","command":"maplist2d[y][x] = Bedrock()"},
+    "7":{"name":"Goal","command":"maplist2d[y][x] = Goal()"},
+    "8":{"name":"not falling tnt","command":"maplist2d[y][x] = Tnt(False)"},
+    "9":{"name":"falling tnt","command":"maplist2d[y][x] = Tnt(True)"},
+    "10":{"name":"not falling stone","command":"maplist2d[y][x] = Stone(False)"},
+    "10 1":{"name":"not falling stone direction 1","command":"maplist2d[y][x] = Stone(False,1)"},
+    "10 2":{"name":"not falling stone direction 2","command":"maplist2d[y][x] = Stone(False,2)"},
+    "10 3":{"name":"not falling stone direction 3","command":"maplist2d[y][x] = Stone(False,3)"},
+    "10 4":{"name":"not falling stone direction 4","command":"maplist2d[y][x] = Stone(False,4)"},
+    "11":{"name":"falling stone","command":"maplist2d[y][x] = Stone(True)"},
+    "11 1":{"name":"falling stone direction 1","command":"maplist2d[y][x] = Stone(True,1)"},
+    "11 2":{"name":"falling stone direction 2","command":"maplist2d[y][x] = Stone(True,2)"},
+    "11 3":{"name":"falling stone direction 3","command":"maplist2d[y][x] = Stone(True,3)"},
+    "11 4":{"name":"falling stone direction 4","command":"maplist2d[y][x] = Stone(True,4)"},
+    "14":{"name":"monster which looking to right","command":"maplist2d[y][x] = Monster(1)"},
+    "15":{"name":"monster which looking to down","command":"maplist2d[y][x] = Monster(2)"},
+    "16":{"name":"monster which looking to left","command":"maplist2d[y][x] = Monster(3)"},
+    "17":{"name":"monster which looking to up","command":"maplist2d[y][x] = Monster(4)"},
+    "18":{"name":"not a falling diamond","command":"maplist2d[y][x] = Diamond(False)"},
+    "19":{"name":"falling diamond","command":"maplist2d[y][x] = Diamond(True)"},
+    "20":{"name":"Door up","command":"maplist2d[y][x] = Door(1)"},
+    "21":{"name":"Door right","command":"maplist2d[y][x] = Door(2)"},
+    "22":{"name":"Door right","command":"maplist2d[y][x] = Door(3)"},
+    "23":{"name":"Door right","command":"maplist2d[y][x] = Door(4)"}
 }
 }
