--- a/src/config/tile commands config.json
+++ b/src/config/tile commands config.json
@@ -3,11 +3,11 @@
     "0":{"name":"empty","command":"maplist2d[y][x] = None"},
     "1":{"name":"local player","command":"other command"},
     "2":{"name":"remote player","command":"maplist2d[y][x] = gamedata.remote_player_;gamedata.remote_player_.image_number_ = 0"},
-    "2 1":{"name":"remote player direction 0","command":"maplist2d[y][x] = gamedata.remote_player_;gamedata.remote_player_.image_number_ = 0"},
-    "2 2":{"name":"remote player direction 1","command":"maplist2d[y][x] = gamedata.remote_player_;gamedata.remote_player_.image_number_ = 1"},
-    "2 3":{"name":"remote player direction 2","command":"maplist2d[y][x] = gamedata.remote_player_;gamedata.remote_player_.image_number_ = 2"},
-    "2 4":{"name":"remote player direction 3","command":"maplist2d[y][x] = gamedata.remote_player_;gamedata.remote_player_.image_number_ = 3"},
-    "2 5":{"name":"remote player direction 4","command":"maplist2d[y][x] = gamedata.remote_player_;gamedata.remote_player_.image_number_ = 4"},
+    "2 1":{"name":"remote player image 0","command":"maplist2d[y][x] = gamedata.remote_player_;gamedata.remote_player_.image_number_ = 0"},
+    "2 2":{"name":"remote player image 1","command":"maplist2d[y][x] = gamedata.remote_player_;gamedata.remote_player_.image_number_ = 1"},
+    "2 3":{"name":"remote player image 2","command":"maplist2d[y][x] = gamedata.remote_player_;gamedata.remote_player_.image_number_ = 2"},
+    "2 4":{"name":"remote player image 3","command":"maplist2d[y][x] = gamedata.remote_player_;gamedata.remote_player_.image_number_ = 3"},
+    "2 5":{"name":"remote player image 4","command":"maplist2d[y][x] = gamedata.remote_player_;gamedata.remote_player_.image_number_ = 4"},
     "3":{"name":"DefaultTile","command":"maplist2d[y][x] = DefaultTile()"},
     "4":{"name":"Brick","command":"maplist2d[y][x] = Brick()"},
     "5":{"name":"Bedrock","command":"maplist2d[y][x] = Bedrock()"},
@@ -24,11 +24,23 @@
     "11 2":{"name":"falling stone direction 2","command":"maplist2d[y][x] = Stone(True,2)"},
     "11 3":{"name":"falling stone direction 3","command":"maplist2d[y][x] = Stone(True,3)"},
     "11 4":{"name":"falling stone direction 4","command":"maplist2d[y][x] = Stone(True,4)"},
+
     "14":{"name":"monster which looking to right","command":"maplist2d[y][x] = Monster(1)"},
     "15":{"name":"monster which looking to down","command":"maplist2d[y][x] = Monster(2)"},
     "16":{"name":"monster which looking to left","command":"maplist2d[y][x] = Monster(3)"},
     "17":{"name":"monster which looking to up","command":"maplist2d[y][x] = Monster(4)"},
+
     "18":{"name":"not a falling diamond","command":"maplist2d[y][x] = Diamond(False)"},
+    "18 1":{"name":"not a falling diamond direction 1","command":"maplist2d[y][x] = Diamond(False,1)"},
+    "18 2":{"name":"not a falling diamond direction 2","command":"maplist2d[y][x] = Diamond(False,2)"},
+    "18 3":{"name":"not a falling diamond direction 3","command":"maplist2d[y][x] = Diamond(False,3)"},
+    "18 4":{"name":"not a falling diamond direction 4","command":"maplist2d[y][x] = Diamond(False,4)"},
+
+    "19 1":{"name":"falling diamond direction 1","command":"maplist2d[y][x] = Diamond(True,1)"},
+    "19 2":{"name":"falling diamond direction 2","command":"maplist2d[y][x] = Diamond(True,2)"},
+    "19 3":{"name":"falling diamond direction 3","command":"maplist2d[y][x] = Diamond(True,3)"},
+    "19 4":{"name":"falling diamond direction 4","command":"maplist2d[y][x] = Diamond(True,4)"},
+
     "19":{"name":"falling diamond","command":"maplist2d[y][x] = Diamond(True)"},
     "20":{"name":"Door up","command":"maplist2d[y][x] = Door(1)"},
     "21":{"name":"Door right","command":"maplist2d[y][x] = Door(2)"},
