fixed bug in CreateExplosion function

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@
 
 
 
-
 # not important:
 
 /maps/singleplayer/korkea.txt
@@ -19,3 +18,6 @@
 /maps/singleplayer/testmap1.txt
 
 /maps/singleplayer/testi.txt
+
+
+/maps/singleplayer/testikartta.txt
