--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
 
 
 
-#needed for the programme to work:
-/media/fonts/Almo_Andrea_FontlabARROW.ttf
+
+
 
 #needed directory "/save"
 
 /save/settings.json
+
+#needed directory "/media/font"
+
+/media/font/*
+
 
 
 #not important:
