--- a/maps/multiplayer/level set config.json
+++ b/maps/multiplayer/level set config.json
@@ -10,6 +10,6 @@
     "1": ["maps/multiplayer/diamond mine","diamond mine"],
     "2": ["maps/multiplayer/go go!","go go!"],
     "3": ["maps/multiplayer/gravity","gravity"],
-    "4": ["maps/multiplayer/stones","stones"]
+    "4": ["maps/multiplayer/tunnel","tunnel"]
   }
 }
