--- a/maps/multiplayer/level set config.json
+++ b/maps/multiplayer/level set config.json
@@ -3,13 +3,14 @@
 {
   "levels are intended for multiplayer": true,
 
-  "map count": 4,
+  "map count": 5,
 
 
   "maps": {
     "1": ["maps/multiplayer/diamond mine","diamond mine"],
     "2": ["maps/multiplayer/go go!","go go!"],
     "3": ["maps/multiplayer/gravity","gravity"],
-    "4": ["maps/multiplayer/tunnel","tunnel"]
+    "4": ["maps/multiplayer/tunnel","tunnel"],
+    "5": ["maps/multiplayer/the rooms","the rooms"]
   }
 }
