--- a/maps/multiplayer/level set config.json
+++ b/maps/multiplayer/level set config.json
@@ -7,7 +7,7 @@
 
 
   "maps": {
-    "1": ["maps/multiplayer/diamond mine","diamond mine"],
+    "1": ["maps/multiplayer/warm up","warm up"],
     "2": ["maps/multiplayer/go go!","go go!"],
     "3": ["maps/multiplayer/gravity","gravity"],
     "4": ["maps/multiplayer/tunnel","tunnel"],
