--- a/maps/singleplayer/level set config.json
+++ b/maps/singleplayer/level set config.json
@@ -3,22 +3,24 @@
 {
   "levels are intended for multiplayer": false,
 
-  "map count": 11,
+  "map count": 13,
 
 
 
   "maps": {
     "1":["maps/singleplayer/deep in the mine","deep in the mine"],
     "2":["maps/singleplayer/monsters","monsters"],
-    "3":["maps/singleplayer/no time!","no time!"],
+    "3":["maps/singleplayer/stones and sand","stones and sand"],
     "4":["maps/singleplayer/down they fall","down they fall"],
-    "5":["maps/singleplayer/stones and sand","stones and sand"],
-    "6":["maps/singleplayer/accident","accident"],
-    "7":["maps/singleplayer/chaos","chaos"],
-    "8":["maps/singleplayer/aijankallio","äijänkallio"],
-    "9":["maps/singleplayer/up","up!"],
-    "10":["maps/singleplayer/shaft","shaft"],
-    "11": ["maps/singleplayer/out of here","out of here"]
+    "5":["maps/singleplayer/flashback","flashback"],
+    "6":["maps/singleplayer/no time!","no time!"],
+    "7":["maps/singleplayer/accident","accident"],
+    "8":["maps/singleplayer/chaos","chaos"],
+    "9":["maps/singleplayer/aijankallio","äijänkallio"],
+    "10":["maps/singleplayer/up","up!"],
+    "11":["maps/singleplayer/shaft","shaft"],
+    "12": ["maps/singleplayer/out of here","out of here"],
+    "13": ["maps/singleplayer/dark","dark"]
   }
 
 }
