--- a/maps/singleplayer/level set config.json
+++ b/maps/singleplayer/level set config.json
@@ -3,7 +3,7 @@
 {
   "levels are intended for multiplayer": false,
 
-  "map count": 13,
+  "map count": 14,
 
 
 
@@ -20,7 +20,8 @@
     "10":["maps/singleplayer/up","up!"],
     "11":["maps/singleplayer/shaft","shaft"],
     "12": ["maps/singleplayer/out of here","out of here"],
-    "13": ["maps/singleplayer/dark","dark"]
+    "13": ["maps/singleplayer/dark","dark"],
+    "14":["maps/singleplayer/try this","try this"]
   }
 
 }
