--- a/media/audio/audio config.json
+++ b/media/audio/audio config.json
@@ -2,8 +2,8 @@
     "audio files":{
         "collect":"media/audio/collectcoin-6075.mp3",
         "explosion":"media/audio/Boom 1.wav",
-        "push": "media/audio/push-blaster.mp3",
-        "drop":"media/audio/fall-blaster.mp3",
+        "push": "media/audio/push.wav",
+        "drop":"media/audio/fall.wav",
         "step":"media/audio/step.wav",
 
         "music1": "media/audio/music/music1.wav"
